# actisleep-tracker

./: .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  actigraphy.html  pyproject.toml  search.js
.github/workflows/: release.yaml  test.yaml
paper/: .gitattributes  paper.bib  paper.md
paper/data/ggir_outputs/output_sub001/: config.csv
paper/data/ggir_outputs/output_sub001/results/: part2_daysummary.csv  part2_summary.csv  part4_nightsummary_sleep_cleaned.csv  part4_summary_sleep_cleaned.csv  part5_daysummary_MM_L30M100V400_T5A5.csv  part5_daysummary_MM_L30M100V500_T5A5.csv  part5_daysummary_MM_L30M120V400_T5A5.csv  part5_daysummary_MM_L30M120V500_T5A5.csv  part5_daysummary_MM_L30M125V400_T5A5.csv  part5_daysummary_MM_L30M125V500_T5A5.csv  part5_daysummary_MM_L40M100V400_T5A5.csv  part5_daysummary_MM_L40M100V500_T5A5.csv  part5_daysummary_MM_L40M120V400_T5A5.csv  part5_daysummary_MM_L40M120V500_T5A5.csv  part5_daysummary_MM_L40M125V400_T5A5.csv  part5_daysummary_MM_L40M125V500_T5A5.csv  part5_daysummary_MM_L50M100V400_T5A5.csv  part5_daysummary_MM_L50M100V500_T5A5.csv  part5_daysummary_MM_L50M120V400_T5A5.csv  part5_daysummary_MM_L50M120V500_T5A5.csv  part5_daysummary_MM_L50M125V400_T5A5.csv  part5_daysummary_MM_L50M125V500_T5A5.csv  part5_daysummary_WW_L30M100V400_T5A5.csv  part5_daysummary_WW_L30M100V500_T5A5.csv  part5_daysummary_WW_L30M120V400_T5A5.csv  part5_daysummary_WW_L30M120V500_T5A5.csv  part5_daysummary_WW_L30M125V400_T5A5.csv  part5_daysummary_WW_L30M125V500_T5A5.csv  part5_daysummary_WW_L40M100V400_T5A5.csv  part5_daysummary_WW_L40M100V500_T5A5.csv  part5_daysummary_WW_L40M120V400_T5A5.csv  part5_daysummary_WW_L40M120V500_T5A5.csv  part5_daysummary_WW_L40M125V400_T5A5.csv  part5_daysummary_WW_L40M125V500_T5A5.csv  part5_daysummary_WW_L50M100V400_T5A5.csv  part5_daysummary_WW_L50M100V500_T5A5.csv  part5_daysummary_WW_L50M120V400_T5A5.csv  part5_daysummary_WW_L50M120V500_T5A5.csv  part5_daysummary_WW_L50M125V400_T5A5.csv  part5_daysummary_WW_L50M125V500_T5A5.csv  (+36 more)
paper/data/raw/: sub001.gt3x
paper/data/scripts/: run_ggir.R
src/actigraphy/: app.py
src/actigraphy/components/: graph.py
src/actigraphy/core/: callback_manager.py  cli.py
src/actigraphy/plotting/: sensor_plots.py
tests/unit/: test_cli.py
(+67 files in other folders)
