[project]
name = "actisleep-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "dash~=2.15",
    "dash-bootstrap-components>=1.7.1",
    "dash-daq>=0.6.0",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "rdata>=0.11.2",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.11.13",
    "vulture>=2.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
actigraphy = "actigraphy.app:run_app"

[tool.hatch.build.targets.wheel]
packages = ["src/actigraphy"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.mypy]
ignore_missing_imports = true
strict = true
plugins =[
  "pydantic.mypy"
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 88
indent-width = 4
src=["src"]

target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN101", # Self should never be type annotated.
  "ANN102", # cls should never be type annotated.
  "PTH", # Dash cannot store Path objects.
  "DTZ", # Timezones handling is not consistent.
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101", # Allow assets
    "ARG", # Unused arguments are common in tests (fixtures).
    "FBT", #Allow positional booleans
    "SLF001", # Allow private member access.
    "INP001", # No need for namespace packages in tests.
]
